# pythia

./: .coveragerc  .env.ci  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  HOWTO.rst  LICENSE  README.rst  dev_docs.rst  ftp_log_sync.py  pyproject.toml  pytest.ini  test_coverage.sh  update_shaft.sh
.gitlab/: build-vue.yml  pre-commit.yml  run-tests.yml
apps/: conftest.py
apps/aleph/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/aleph/logic/: data_import.py  data_manipulation.py
apps/aleph/migrations/: 0001_initial.py  0002_json_field_migration.py
apps/aleph/tests/: test_aleph_sync.py
apps/bookrank/: admin.py  apps.py  managers.py  models.py  serializers.py  urls.py  view_mixins.py  views.py
apps/bookrank/logic/: aleph.py  cleanup.py  command_help.py  marc.py  static_score.py  topics.py  work_copies.py
apps/bookrank/migrations/: 0001_initial.py  0002_brmodelinstance_params.py  0003_workset_meta_change.py  0004_exlicit_workscore_topicscore_link.py  0005_brmodel_algorithm.py  0006_more_bookrank_algos.py  0007_topic_int_type.py  0008_remove_char_topic_type.py  0009_topic_typ_index.py  0010_work_lang.py  0011_work_catalog_date.py  0012_explicit_publisher_author.py  0013_explicit_language.py  0014_explicit_subjectcategory.py  0015_normalize_connecting_models.py  0016_more_explicit_topics.py  0017_nullable_work_category.py  0018_trgm_index.py  0019_subjectcategory_is_controlled_dictionary.py  0020_delete_brmodel_and_related_models.py  0021_createdupdatedmixin.py  0022_remove_topic_worktopic_topicsubtype.py  0023_work_isbn.py  0024_adds_static_score_on_et.py  0025_work_acquisition_score.py  0026_static_growth_fields.py  0027_workcopy.py  0028_et_normalized_score.py  0029_work_acquisition_date.py  0030_work_static_fields_update.py
apps/bookrank/tests/: conftest.py  fake_data.py  test_api.py  test_commands.py  test_managers.py  test_static_scores.py  test_topics.py  test_utils.py  test_views.py
apps/candidates/: admin.py  managers.py  models.py  serializers.py  urls.py  views.py
apps/candidates/logic/: lang.py  static_scores.py  sync_candidates_utils.py
apps/candidates/migrations/: 0001_initial.py  0002_add_candidateprediction.py  0003_predictions_unique_for_mi_candidate.py  0004_delete_candidateprediction.py  0005_delete_candidate_and_source_models.py  0006_reimplements_app_models.py  0007_related_name_for_candidate_publisher.py  0008_adds_subjects_to_candidates.py  (+9 more)
apps/core/: account.py  admin.py  apps.py  db.py  exceptions.py  middleware.py  model_mixins.py  models.py  serializers.py  signals.py  urls.py  views.py
apps/hits/: admin.py  models.py  urls.py  views.py
apps/importers/: import_base.py  utils.py
apps/psh/: apps.py  models.py  serializers.py
apps/source_data/: admin.py  apps.py  models.py
config/: urls.py  wsgi.py
config/settings/: base.py  devel.py  production_cli.py
data/: _prevodLCC-Thema-proNTK.csv  konspekt_aut.txt
data/bic_to_thema/: bic_to_thema_t1.csv
design/pythia-ui/: README.md  package.json  vue.config.js
(+180 files in other folders)
