[tool.poetry]
name = "pythia"
version = "1.0.0"
description = ""
authors = ["Beda Kosata <beda@bigdigdata.com>"]

[tool.poetry.dependencies]
"ufal.morphodita" = "~1.10.1.1"
anytree = "^2.8.0"
django = "^3.2"
django-allauth = "~0.51.0"
django-anymail = "^8.6"
django-cachalot = "~2.5.1"
django-compressor = "~4.1"
django-js-asset = "~2.0.0"
django-mptt = "~0.13.4"
django-redis = "~5.2.0"
django-rest-auth = "~0.9.5"
djangorestframework = "~3.13.1"
drf-nested-routers = "~0.93.4"
elasticsearch = "~8.3.3"
factory-boy = "^3.2.1"
faker = "^14.1.0"
fastcache = "^1.1.0"
# gensim = "~4.2.0"
isbnlib = "^3.10.10"
lz4 = "~4.0.2"
nltk = "^3.7"
oaiharvest = "~3.0.0"
psycopg2-binary = "~2.9.3"
pyfakefs = "^4.6.3"
pymarc = "~4.2.0"
pyoai = "2.5.0"  # 2.5.1 cannot be installed for some reason
pysftp = "^0.2.9"
python = ">=3.8,<4.0"
python-dateutil = "~2.8.1"
python-decouple = "^3.3"
pytz = "~2022.2.1"
redis = "~4.3.4"
requests = "~2.28.1"
tabulate = "~0.8.10"
tqdm = "~4.64.0"
xmltodict = "^0.13.0"
zstandard = "^0.18.0"
extmaillogin = "0.3.0"

[tool.poetry.dev-dependencies]
black = "22.6.0"
django-debug-toolbar = "^3.6.0"
django-extensions = "^3.2.0"
django-querycount = "^0.7.0"
# pandas = "^1.4.3"
pre-commit = "^2.20.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-django = "^4.5.2"

[tool.black]
line-length = 100
skip-string-normalization = true
target-version = ["py36"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
